--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
           haxelib install hscript
           haxelib install hscript-iris
           haxelib install flixel-tools
-          haxelib install flxanimate
+          haxelib git flxanimate https://github.com/swordcube/flxanimate
           haxelib git linc_luajit https://github.com/MobilePorting/linc_luajit
           haxelib list
       
