--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
           haxelib install hscript
           haxelib install hscript-iris
           haxelib install flixel-tools
-          haxelib git flxanimate https://github.com/FunkinCrew/flxanimate 401d3cb04f7dafc2f835a233e77e4641a8786aef
+          haxelib git flxanimate https://github.com/FunkinCrew/flxanimate
           haxelib git linc_luajit https://github.com/MobilePorting/linc_luajit
           haxelib list
       
