--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,11 +53,11 @@ jobs:
           haxelib setup ~/haxelib
           haxelib git hxcpp https://github.com/MobilePorting/hxcpp
           haxelib git lime https://github.com/MobilePorting/lime
-          haxelib install openfl 9.3.3
-          haxelib install flixel 6.0.0
+          haxelib install openfl
+          haxelib install flixel
           haxelib install flixel-ui
           haxelib install flixel-addons
-          haxelib install hxvlc 2.1.2
+          haxelib install hxvlc
           haxelib install hscript
           haxelib install hscript-iris
           haxelib install flixel-tools
